{
    "name": "InputPlayer",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "30f32aa0-9b03-43d9-9b4f-62e56cc940bd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "bb179efb-485e-4296-b1fa-f10b18415a22",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "88fa6d85-f582-494b-b351-c0c54ed13668",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "beed9f21-de11-4920-aff8-938712b48fb9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8171d922-40f2-4ccc-a066-d0fe47e48ac8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "149cadff-e550-4dcc-981d-7df42fb53341",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "303ac0d8-219c-4067-ac76-ae68dff0eb7a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d2651b46-4c7f-4472-889d-040343c5b87f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Building",
            "id": "82fea9c8-5f1f-44f2-bbfc-848ac6de4845",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "d7d1023e-4558-49d6-b61e-afdf14184e03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RigthClick",
                    "type": "Button",
                    "id": "bf6d748b-8077-442a-9671-789235776a75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Build1",
                    "type": "Value",
                    "id": "d2b11efd-9f83-48fa-9869-9aedc1cc2154",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Build2",
                    "type": "Button",
                    "id": "bb29c8cd-001f-48ef-b29b-cceb4b28700e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Build3",
                    "type": "Button",
                    "id": "2ab20cf1-be57-49d9-ae32-b251971a1962",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UndoSelection",
                    "type": "Button",
                    "id": "82f90a24-ed80-41a3-a16a-e3643ea6b708",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "1cae2784-3615-493d-8a70-3373861ba5ad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "c6374032-8395-4b6e-aebf-7d7991db4285",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "7f501612-0123-4d92-9791-f319f0113d10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "157b92bc-4cd0-4725-b5d0-a219daacd8a5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7821a77-ab6b-4846-829c-a4c57ad42829",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "834687a8-59ae-4359-a5fc-4cb2c4743d14",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Build1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79530066-a43d-4af3-abd9-922406743ada",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Build2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17950585-a4b0-4b03-8cfc-8d9ecaecf177",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Build3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "523bd1d4-e26d-4842-9711-f948f4834cd0",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UndoSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b236b662-6b95-49f0-92d7-aa2af4029aa5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7a3083f-e6b9-408e-8568-3455844d473e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccadb63e-f035-429e-8e16-0f897b6040a9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RigthClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53b0e4c0-0be4-4173-a9df-36d3e99fc117",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0d5b233-df57-4357-a9bf-1c6601d3bf1f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "fc47b34b-bbd2-49f1-ac95-aa7b069dc28f",
            "actions": [
                {
                    "name": "SpawnEnemy",
                    "type": "Button",
                    "id": "f97beb4f-1e52-453a-b5ee-21fca05c7781",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "051e1830-60d2-48f0-9416-a5e5283e435e",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}